--- a/web/Views/Home/Main.cshtml
+++ b/web/Views/Home/Main.cshtml
@@ -47,13 +47,25 @@ var apiUrl = "";
                         </ul>
                     </div>
                 </div>
-            
-                <div id="event-list" style="border: 1px solid black;">
+                <div>
+                    <div id="event-list" style="border: 1px solid black;">
+                        <legend style="background-color: rgba(150,150,150,0.5); border-radius: 1px; padding:5px; margin-bottom:0">
+                            Upcoming Events
+                        </legend>
+                        <div id="event-list-content" >
+                            <ul class="list-group" id="event-listcontent">  
+                                @* <li class="list-group-item">Cras justo odio</li> *@
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="plannedevent-list" style="border: 1px solid black;">
                     <legend style="background-color: rgba(150,150,150,0.5); border-radius: 1px; padding:5px; margin-bottom:0">
-                        Upcoming Events
+                        Events you plan on visiting
                     </legend>
-                    <div id="event-list-content" >
-                        <ul class="list-group" id="event-listcontent">  
+                    <div id="plannedevent-list-content" >
+                        <ul class="list-group" id="plannedevent-listcontent">  
                             @* <li class="list-group-item">Cras justo odio</li> *@
                         </ul>
                     </div>
@@ -112,6 +124,7 @@ var apiUrl = "";
                 </div>
             </div>
         </div>
+
     </body>
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -197,6 +210,25 @@ var apiUrl = "";
     {
         let response = await fetch("@apiUrl"+`profilehasevent/create/${profileId}/${EventId}`, {
             method: 'POST',
+            headers: {'ApiKey':'secret' }
+        });
+        console.log(response)
+        if (response.ok) {
+            // If the status code is OK, then the update was successful
+            console.log("GOOD")
+            $("#info"+EventId).parent().remove()
+            window.location.reload()
+        } else {
+            // If the status code is not OK, then the update was not successful
+            console.log("BAD")
+        }
+    }
+
+    async function removeEventFromProfile(profileId, EventId)
+    {
+        let response = await fetch("@apiUrl"+`profilehasevent/${profileId}/${EventId}`, {
+            
+            method: 'DELETE',
             headers: {'ApiKey':'secret' }
         });
         console.log(response)
@@ -461,6 +493,177 @@ var apiUrl = "";
         }
     }
 
+    async function displayPlanned()
+    {
+        let eventsArray = []
+        
+        await fetch("@apiUrl"+"event/profile/upcoming/"+getCookie("loginData"),{
+            method: 'GET',
+            headers: {
+            'ApiKey': 'secret'
+            }
+        })
+        .then(response => response.json())
+        .then(events => {
+            console.log("Got events")
+            eventsArray = events
+        });
+
+        console.log(eventsArray)
+    
+        let izpis = ""
+        for (let i = 0; i < eventsArray.length; i++) {
+            // console.log(eventsArray[i])
+            let listItem = document.createElement('li');
+
+            //var button = document.createElement("button")
+
+            listItem.classList.add("list-group-item");
+
+            let id
+
+            for (let [key, attrib] of Object.entries(eventsArray[i])) {
+
+                //console.log(key, attrib)
+
+                if (key == "id") {
+                    id = attrib
+                } else if (key == "name") {
+                    izpis = attrib + ","
+                    listItem.appendChild(document.createTextNode(izpis));
+                    listItem.innerHTML += "<br>";
+                } else if (key == "date") {
+                    let parts = attrib.split("T")
+                    let day = parts[0].split('-')[2]
+                    let month = parts[0].split('-')[1]
+                    let year = parts[0].split('-')[0]
+                    let finaldate = day + "." + month + "." + year
+                    izpis = finaldate + ","
+
+                    listItem.appendChild(document.createTextNode(izpis));
+
+                    listItem.innerHTML += "<br>";
+
+                } else if (key == "location") {
+                    izpis = attrib
+
+                    listItem.appendChild(document.createTextNode(izpis));
+                    listItem.innerHTML += "<br>";
+
+                    var info = document.createElement("i")
+                    var linkInfo = document.createElement("a")
+
+                    info.style.styleFloat = 'left';
+                    info.style.cssFloat = 'left';
+                    info.setAttribute("id", "info" + id)
+
+                    info.classList.add("fa-solid");
+                    info.classList.add("fa-file-lines");
+
+
+                    var remove = document.createElement("i")
+                    var linkGoing = document.createElement("a")
+
+                    remove.style.styleFloat = 'right';
+                    remove.style.cssFloat = 'right';
+                    remove.style.fontSize = "20px";
+                    remove.setAttribute("id", "remove" + id)
+
+                    remove.classList.add("fa-solid");
+                    remove.classList.add("fa-calendar-minus");
+
+
+                    info.appendChild(linkInfo)
+                    remove.appendChild(linkGoing)
+
+                    listItem.appendChild(info)
+
+                    listItem.appendChild(remove)
+
+
+                }
+                izpis = ""
+            }
+            document.getElementById('plannedevent-listcontent').appendChild(listItem);
+        }
+        if(eventsArray.length == 0)
+        {
+            let listItem = document.createElement('li');
+
+            //var button = document.createElement("button")
+
+            listItem.classList.add("list-group-item");
+
+            let izpis = "Looks like you are not planning on visiting any event in the near future"
+            listItem.appendChild(document.createTextNode(izpis));
+
+            document.getElementById('plannedevent-listcontent').appendChild(listItem);
+        }
+        
+
+
+        let eventhasactivityArray=[]
+        
+        await fetch("@apiUrl"+"eventhasactivity",{
+            method: 'GET',
+            headers: {
+            'ApiKey': 'secret'
+            }
+        })
+            .then(response => response.json())
+            .then(eventhasactivity =>{
+                eventhasactivityArray=eventhasactivity
+            });
+
+        let activityArray=[]
+        await fetch("@apiUrl"+"activity",{
+            method: 'GET',
+            headers: {
+            'ApiKey': 'secret'
+            }
+        })
+            .then(response => response.json())
+            .then(activity =>{
+                activityArray=activity
+            });
+
+        let activityID
+        let eventID
+        let naslov
+        for (let i = 0; i < eventhasactivityArray.length; i++) {
+            
+            
+            await fetch("@apiUrl"+"activity/"+eventhasactivityArray[i].activityID,{
+            method: 'GET',
+            headers: {
+                'ApiKey': 'secret'
+                }
+            })
+            .then(response => response.json())
+            .then(activity =>{
+                $("#info" + eventhasactivityArray[i].eventID).click(function() {
+                $('#InfoModal').modal('show')
+
+                for(let j=0; j< eventsArray.length; j++)
+                {
+                    if(eventsArray[j].id == eventhasactivityArray[i].eventID)
+                    {
+                        naslov = eventsArray[j].name
+                    }
+                }
+
+                $('#infoBody').text(activity.description);
+                $('#InfoLabel').text(naslov);
+                console.log(activity)
+                });
+                $("#remove" + eventhasactivityArray[i].eventID).click(function() {
+                    let userId = (getCookie("loginData"))
+                    removeEventFromProfile(userId,eventhasactivityArray[i].eventID)
+                });
+            });
+        }
+    }
+
     let displayed=0
 
     async function main()
@@ -482,6 +685,7 @@ var apiUrl = "";
         displayPersonalInfo();
         fillEditModal();
         displayUpcoming();
+        displayPlanned();
         setListeners()
     }
 
