--- a/web/Views/Home/Review.cshtml
+++ b/web/Views/Home/Review.cshtml
@@ -119,31 +119,12 @@ var apiUrl = "";
     }
     let profileObject;
 
-    async function removeEventFromProfile(profileId, EventId)
-    {
-        let response = await fetch("@apiUrl"+`profilehasevent/create/${profileId}/${EventId}`, {
-            
-            method: 'POST',
-            headers: {'ApiKey':'secret' }
-        });
-        console.log(response)
-        if (response.ok) {
-            // If the status code is OK, then the update was successful
-            console.log("GOOD")
-            $("#info"+EventId).parent().remove()
-            window.location.reload()
-        } else {
-            // If the status code is not OK, then the update was not successful
-            console.log("BAD")
-        }
-    }
-
     async function postReview(eventID)
     {
         console.log(eventID)
         console.log(typeof eventID);
         let newjson = JSON.stringify({
-            profileId: getCookie("loginData"),
+            ApplicationUserId: getCookie("loginData"),
             eventId: parseInt(eventID),
             grade: $("#editStars").val(),
             comment: $("#editReview").val()
@@ -347,15 +328,30 @@ var apiUrl = "";
                 });
             });
         }
-        console.log(eventsArray)
+
+        let reviewsArray = []
+        await fetch("@apiUrl"+"review/profile/"+getCookie("loginData"),{
+            method: 'GET',
+            headers: {
+            'ApiKey': 'secret'
+            }
+        })
+            .then(response => response.json())
+            .then(reviews =>{
+                reviewsArray=reviews
+            });
+
+        console.log(reviewsArray)
         for(let i=0;i<eventsArray.length;i++ )
         {   
-            console.log(eventsArray[i])
             $("#review" + eventsArray[i].id).click(function() {
                 
                 let userId = (getCookie("loginData"))
                 $("#eventId").text(eventsArray[i].id)
                 $('#reviewModal').modal('show')
+                let oldRev = reviewsArray.find(review => review.eventID == eventsArray[i].id)
+                $('#editReview').val(oldRev.comment)
+                $('#editStars').val(oldRev.grade).change()
             });
         }
 
