Final touches on css. working pwa

--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -50,6 +50,14 @@ var apiUrl = "";
   <head>
     <link href="/css/styles.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json" />
+      <style>
+        @@media screen and (max-width: 465px){
+            .TextBlock1{
+              width: 100%;
+              left: 0%;
+            }
+        }
+    </style>
   </head>
   <body>
     <div class="text-center">
@@ -63,7 +71,7 @@ var apiUrl = "";
       </div>
       This is a small application developed by two Students. We want to help you find interesting cultural events around you
     </div>
-    <div class="TextBlock2">
+    <div class="TextBlock1">
       <div class="TextBlockTitle">
         What is our mission?
       </div>
