--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -58,12 +58,11 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted" style="background-color: white;">
+    <div style="background-color: white; bottom:0; position: absolute; width: 100%">
         <div class="container" >
             &copy; 2022 - SloveniaTrips
         </div>
-    </footer>
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
