--- a/web/wwwroot/css/styles.css
+++ b/web/wwwroot/css/styles.css
@@ -27,26 +27,18 @@
 }
 
 .TextBlock1 {
-  width: 30vw;
+  width: 35vw;
+  left: 31%;
   height: fit-content;
   max-height: 30vh;
   background-color: rgba(130, 130, 130, 0.8);
   border-radius: 3px;
   text-align: center;
   padding: 10px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
-.TextBlock2 {
-  width: 30vw;
-  height: fit-content;
-  max-height: 30vh;
-  background-color: rgba(130, 130, 130, 0.8);
-  border-radius: 3px;
-  position: relative;
-  right: -70%;
-  text-align: center;
-  padding: 10px;
-}
 
 .TextBlockTitle {
   width: 100%;
