--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@ var apiUrl = "";
       <div class="TextBlockTitle">
         What is our mission?
       </div>
-      We wanted to aquaint tourists with our lovely little country culturally and historically in as little time as possible
+      We wanted to acquaint tourists with our lovely little country culturally and historically in as little time as possible
     </div>
     <div class="TextBlock1">
       <div class="TextBlockTitle">
