--- a/web/Views/Home/Review.cshtml
+++ b/web/Views/Home/Review.cshtml
@@ -53,7 +53,7 @@ var apiUrl = "";
                     <div class="modal-body">
                         <a hidden id="eventId"></a>
                         <a style="font-weight: 500;">Review: </a><input type="textarea" cols="60" rows="5" maxLength = "500" placeholder="Review" id="editReview"> </input> <br><hr>
-                        <a style="font-weight: 500;">Grade: </a>
+                        <a style="font-weight: 500;">Rating: </a>
                         <select id="editStars" style="width: 47px; text-align: center" >
                             <option value="1">1</option>
                             <option value="2">2</option>
